--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
-<html lang="ja" class="no-js">
+<html lang="ja">
 <head>
-<meta charset="shift_jis">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width">
-<meta name="description" content="dummy">
 <title></title>
+<meta name="description" content="dummy">
 </head>
 
 <body id="body">
